--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@polkadot/util-crypto": "^5.5.1",
     "@substrate/api-sidecar": "^3.0.0",
     "@substrate/txwrapper": "^3.10.7",
+    "@ddorgan/txwrapper": "^3.10.7",
     "@types/memoizee": "^0.4.5",
     "axios": "^0.20.0"
   },
